test/2-errors/tab.test
{
  'code' : 1,
  'err' : ('match', 'parse error: .*/ploy/test/2-errors/tab.ploy:2:1: illegal tab character'),
}
